<resources>
    <string name="app_name">Gesture Based Drawing</string>
    <string name="line">Line</string>
    <string name="square">Square</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="orange">Orange</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="color">Color</string>
    <string name="shape">Shape</string>
    <string name="drawing">Drawing</string>
    <string name="interpretation">Interpretation</string>
    <string name="show_palette">Show Palette</string>
    <string name="hide_palette">Hide Palette</string>
</resources>
