<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraintLayout">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintTop_toTopOf="parent"/>
    <com.omimi.gesturebaseddrawing.ShapeInterpretationView android:layout_width="0dp"
                                                           android:layout_height="0dp"
                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintTop_toBottomOf="@+id/toolbar"
                                                           android:id="@+id/shape_interpretation_view"
                                                           android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:id="@+id/cl_user_draw_input"
            android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp" android:id="@+id/cl_palette"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:text="@string/shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_shape" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp" android:textColor="@android:color/black" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_black"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_red"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_red"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_color"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_blue"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_green"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_square"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/square"
                    app:layout_constraintTop_toBottomOf="@+id/btn_triangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_line"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/line"
                    app:layout_constraintTop_toBottomOf="@+id/btn_square" app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_color" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textSize="30sp" android:textColor="@android:color/black"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_circle" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_green"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_black"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_circle"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/circle"
                    app:layout_constraintTop_toBottomOf="@+id/btn_line" app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"/>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_triangle"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/triangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:backgroundTint="@color/defaultShapeType" android:textColor="@android:color/black"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_shape"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.omimi.gesturebaseddrawing.DrawShapesView android:layout_width="0dp"
                                                      android:layout_height="0dp"
                                                      app:layout_constraintEnd_toEndOf="parent"
                                                      app:layout_constraintBottom_toBottomOf="parent"
                                                      android:id="@+id/dsv_user_draw_input"
                                                      app:layout_constraintTop_toTopOf="parent"
                                                      app:layout_constraintStart_toEndOf="@+id/cl_palette"
                                                      android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>